openturns/1.17/_sources/auto_data_analysis/manage_data_and_samples/plot_sample_pandas.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/manage_data_and_samples/plot_sample_pandas.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:


Link Pandas and OpenTURNS
=========================

.. GENERATED FROM PYTHON SOURCE LINES 5-7

.. code-block:: default

    # sphinx_gallery_thumbnail_path = '_static/pandas.png'








.. GENERATED FROM PYTHON SOURCE LINES 8-9

In this example we are going to explore interaction with Pandas data analysis tool.

.. GENERATED FROM PYTHON SOURCE LINES 11-16

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import pandas as pd
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Create a sample from a 3-d normal distribution

.. GENERATED FROM PYTHON SOURCE LINES 18-20

.. code-block:: default

    sample = ot.Normal(3).getSample(10)








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Create a DataFrame from a Sample

.. GENERATED FROM PYTHON SOURCE LINES 22-25

.. code-block:: default

    df = pd.DataFrame.from_records(sample, columns=sample.getDescription())
    df.describe()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>X0</th>
          <th>X1</th>
          <th>X2</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>count</th>
          <td>10.000000</td>
          <td>10.000000</td>
          <td>10.000000</td>
        </tr>
        <tr>
          <th>mean</th>
          <td>0.330767</td>
          <td>0.078262</td>
          <td>0.028626</td>
        </tr>
        <tr>
          <th>std</th>
          <td>1.068377</td>
          <td>0.927432</td>
          <td>0.924196</td>
        </tr>
        <tr>
          <th>min</th>
          <td>-0.721533</td>
          <td>-1.488986</td>
          <td>-1.787964</td>
        </tr>
        <tr>
          <th>25%</th>
          <td>-0.488980</td>
          <td>-0.304870</td>
          <td>-0.620888</td>
        </tr>
        <tr>
          <th>50%</th>
          <td>0.155288</td>
          <td>-0.027645</td>
          <td>0.337171</td>
        </tr>
        <tr>
          <th>75%</th>
          <td>0.466659</td>
          <td>0.858217</td>
          <td>0.506955</td>
        </tr>
        <tr>
          <th>max</th>
          <td>2.514145</td>
          <td>1.367826</td>
          <td>1.188010</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 26-27

Create a Sample from a DataFrame

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: default

    sample2 = ot.Sample(df.values)
    sample2.setDescription(df.columns)
    sample2





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <TABLE><TR><TD></TD><TH>X0</TH><TH>X1</TH><TH>X2</TH></TR>
    <TR><TH>0</TH><TD>-0.427656</TD><TD>1.123174</TD><TD>1.18801</TD></TR>
    <TR><TH>1</TH><TD>2.514145</TD><TD>-1.488986</TD><TD>0.5213786</TD></TR>
    <TR><TH>2</TH><TD>-0.5094218</TD><TD>-0.326085</TD><TD>0.4636851</TD></TR>
    <TR><TH>3</TH><TD>-0.09078383</TD><TD>0.9957932</TD><TD>-0.1394528</TD></TR>
    <TR><TH>4</TH><TD>-0.5602056</TD><TD>0.4454897</TD><TD>0.322925</TD></TR>
    <TR><TH>5</TH><TD>0.4457853</TD><TD>-1.038077</TD><TD>-0.8567123</TD></TR>
    <TR><TH>6</TH><TD>0.4736169</TD><TD>-0.1254977</TD><TD>0.3514178</TD></TR>
    <TR><TH>7</TH><TD>1.782359</TD><TD>0.07020736</TD><TD>-0.7813665</TD></TR>
    <TR><TH>8</TH><TD>-0.7215334</TD><TD>-0.2412235</TD><TD>-1.787964</TD></TR>
    <TR><TH>9</TH><TD>0.4013597</TD><TD>1.367826</TD><TD>1.004343</TD></TR>
    </TABLE>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.198 seconds)


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_sample_pandas.py <plot_sample_pandas.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_sample_pandas.ipynb <plot_sample_pandas.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
