openturns/1.21/_sources/auto_data_analysis/manage_data_and_samples/plot_sample_pandas.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/manage_data_and_samples/plot_sample_pandas.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:


Link Pandas and OpenTURNS
=========================

.. GENERATED FROM PYTHON SOURCE LINES 5-7

.. code-block:: Python

    # sphinx_gallery_thumbnail_path = '_static/pandas.png'








.. GENERATED FROM PYTHON SOURCE LINES 8-9

In this example we are going to explore interaction with Pandas data analysis tool.

.. GENERATED FROM PYTHON SOURCE LINES 11-15

.. code-block:: Python

    import openturns as ot

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Create a sample from a 3-d normal distribution

.. GENERATED FROM PYTHON SOURCE LINES 17-19

.. code-block:: Python

    sample = ot.Normal(3).getSample(10)








.. GENERATED FROM PYTHON SOURCE LINES 20-21

Create a DataFrame from a Sample

.. GENERATED FROM PYTHON SOURCE LINES 21-24

.. code-block:: Python

    df = sample.asDataFrame()
    df.describe()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>X0</th>
          <th>X1</th>
          <th>X2</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>count</th>
          <td>10.000000</td>
          <td>10.000000</td>
          <td>10.000000</td>
        </tr>
        <tr>
          <th>mean</th>
          <td>0.201254</td>
          <td>-0.341580</td>
          <td>-0.143151</td>
        </tr>
        <tr>
          <th>std</th>
          <td>1.122471</td>
          <td>1.126257</td>
          <td>0.678845</td>
        </tr>
        <tr>
          <th>min</th>
          <td>-2.290062</td>
          <td>-2.181385</td>
          <td>-1.311781</td>
        </tr>
        <tr>
          <th>25%</th>
          <td>-0.288951</td>
          <td>-1.209149</td>
          <td>-0.695591</td>
        </tr>
        <tr>
          <th>50%</th>
          <td>0.459701</td>
          <td>-0.298012</td>
          <td>0.060783</td>
        </tr>
        <tr>
          <th>75%</th>
          <td>0.746917</td>
          <td>0.351669</td>
          <td>0.343263</td>
        </tr>
        <tr>
          <th>max</th>
          <td>1.782359</td>
          <td>1.437249</td>
          <td>0.810668</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 25-26

Create a Sample from a DataFrame

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: Python

    sample2 = ot.Sample.BuildFromDataFrame(df)
    sample2





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table>
      <tr><td></td><th>X0</th><th>X1</th><th>X2</th></tr>
      <tr><th>0</th><td>0.6082017</td><td>-1.266173</td><td>-0.4382656</td></tr>
      <tr><th>1</th><td>1.205478</td><td>-2.181385</td><td>0.3500421</td></tr>
      <tr><th>2</th><td>-0.355007</td><td>1.437249</td><td>0.810668</td></tr>
      <tr><th>3</th><td>0.793156</td><td>-0.4705256</td><td>0.2610179</td></tr>
      <tr><th>4</th><td>-2.290062</td><td>-1.282885</td><td>-1.311781</td></tr>
      <tr><th>5</th><td>-0.09078383</td><td>0.9957932</td><td>-0.1394528</td></tr>
      <tr><th>6</th><td>-0.5602056</td><td>0.4454897</td><td>0.322925</td></tr>
      <tr><th>7</th><td>0.4457853</td><td>-1.038077</td><td>-0.8567123</td></tr>
      <tr><th>8</th><td>0.4736169</td><td>-0.1254977</td><td>0.3514178</td></tr>
      <tr><th>9</th><td>1.782359</td><td>0.07020736</td><td>-0.7813665</td></tr>
    </table>
    </div>
    <br />
    <br />


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_sample_pandas.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_sample_pandas.ipynb <plot_sample_pandas.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_sample_pandas.py <plot_sample_pandas.py>`
